--- a/index.html
+++ b/index.html
@@ -287,9 +287,10 @@
         <nav>
             <div class="logo">HabitNEST</div>
             <div class="nav-buttons">
-                <button onclick="location.href='{{ url_for('auth.login') }}'" class="signin-btn">Sign In</button>
-                <button onclick="location.href='{{ url_for('auth.register') }}'" class="signup-btn">Sign Up</button>
-            </div>
+    <button onclick="location.href='login.html'" class="signin-btn">Sign In</button>
+    <button onclick="location.href='register.html'" class="signup-btn">Sign Up</button>
+</div>
+
         </nav>
     </header>
 
