--- a/login.html
+++ b/login.html
@@ -23,7 +23,6 @@
             overflow-x: hidden;
         }
 
-        /* Animated Background */
         .background {
             position: fixed;
             width: 100vw;
@@ -45,23 +44,9 @@
             animation: cube 12s ease-in forwards infinite;
         }
 
-        .cube:nth-child(2) {
-            animation-delay: 2s;
-            left: 25vw;
-            top: 40vh;
-        }
-
-        .cube:nth-child(3) {
-            animation-delay: 4s;
-            left: 75vw;
-            top: 50vh;
-        }
-
-        .cube:nth-child(4) {
-            animation-delay: 6s;
-            left: 90vw;
-            top: 10vh;
-        }
+        .cube:nth-child(2) { animation-delay: 2s; left: 25vw; top: 40vh; }
+        .cube:nth-child(3) { animation-delay: 4s; left: 75vw; top: 50vh; }
+        .cube:nth-child(4) { animation-delay: 6s; left: 90vw; top: 10vh; }
 
         @keyframes cube {
             from {
@@ -213,13 +198,15 @@
         <div class="cube"></div>
     </div>
 
-    <a href="{{ url_for('main.index') }}" class="back-to-home">
+    <!-- Fixed Back to Home Link -->
+    <a href="index.html" class="back-to-home">
         <i class='bx bx-home-alt'></i> Back to Home
     </a>
 
     <div class="wrapper">
         <h1>Login</h1>
-        <form action="{{ url_for('auth.login') }}" method="POST">
+        <!-- Changed action to "#" since there's no backend -->
+        <form action="#" method="POST">
             <div class="input-box">
                 <input type="email" name="email" placeholder="Email" required>
                 <i class='bx bx-envelope'></i>
@@ -230,7 +217,7 @@
             </div>
             <button type="submit" class="btn">Login</button>
             <div class="register-link">
-                <p>Don't have an account? <a href="{{ url_for('auth.register') }}">Register here</a></p>
+                <p>Don't have an account? <a href="register.html">Register here</a></p>
             </div>
         </form>
     </div>
