--- a/base.html
+++ b/base.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HabitNEST</title>
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        :root {
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>HabitNEST</title>
+  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    :root {
             --primary-color: #4CAF50;
             --secondary-color: #45a049;
             --dark-bg: #1a1a1a;
@@ -305,190 +305,169 @@
             border-color: #f44336;
             color: var(--text-color);
         }
-    </style>
+  </style>
 </head>
 <body>
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a class="navbar-brand" href="{{ url_for('habits.base') }}">HabitNEST</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'habits.base' %}active{% endif %}" href="{{ url_for('habits.base') }}">
-                            <i class='bx bxs-dashboard'></i> Dashboard
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'habits.analytics' %}active{% endif %}" href="{{ url_for('habits.analytics') }}">
-                            <i class='bx bx-line-chart'></i> Analytics
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'habits.achievements' %}active{% endif %}" href="{{ url_for('habits.achievements') }}">
-                            <i class='bx bx-trophy'></i> Achievements
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.endpoint == 'habits.calendar' %}active{% endif %}" href="{{ url_for('habits.calendar') }}">
-                            <i class='bx bx-calendar'></i> Calendar
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth.logout') }}">
-                            <i class='bx bx-log-out'></i> Logout
-                        </a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
-    <!-- Main Content -->
-    <div class="dashboard-container">
-        <!-- Flash Messages -->
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-                {% for category, message in messages %}
-                    <div class="alert alert-{{ category }} alert-dismissible fade show" role="alert">
-                        {{ message }}
-                        <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-                    </div>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
+  <!-- ✅ STATIC NAVBAR LINKS -->
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand" href="base.html">HabitNEST</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link active" href="base.html"><i class='bx bxs-dashboard'></i> Dashboard</a></li>
+          <li class="nav-item"><a class="nav-link" href="analytics.html"><i class='bx bx-line-chart'></i> Analytics</a></li>
+          <li class="nav-item"><a class="nav-link" href="achievements.html"><i class='bx bx-trophy'></i> Achievements</a></li>
+          <li class="nav-item"><a class="nav-link" href="calendar.html"><i class='bx bx-calendar'></i> Calendar</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html"><i class='bx bx-log-out'></i> Logout</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-        <!-- Welcome Section -->
-        <div class="welcome-section">
-            <h1>Welcome, {{ current_user.username }}!</h1>
-            <p>Track your habits and build a better you.</p>
-        </div>
+  <div class="dashboard-container">
 
-        <!-- Add Habit Form -->
-        <div class="add-habit-section">
-            <h2>Add New Habit</h2>
-            <form action="{{ url_for('habits.add_habit') }}" method="POST">
-                <div class="row g-3">
-                    <div class="col-md-6">
-                        <input type="text" class="form-control" name="name" placeholder="Habit Name" required>
-                    </div>
-                    <div class="col-md-6">
-                        <select class="form-control" name="category" required>
-                            <option value="">Select Category</option>
-                            <option value="Health">Health</option>
-                            <option value="Fitness">Fitness</option>
-                            <option value="Learning">Learning</option>
-                            <option value="Productivity">Productivity</option>
-                            <option value="Lifestyle">Lifestyle</option>
-                        </select>
-                    </div>
-                    <div class="col-12">
-                        <textarea class="form-control" name="description" placeholder="Description (optional)" rows="2"></textarea>
-                    </div>
-                    <div class="col-md-6">
-                        <select class="form-control" name="frequency" required>
-                            <option value="">Select Frequency</option>
-                            <option value="daily">Daily</option>
-                            <option value="weekly">Weekly</option>
-                            <option value="monthly">Monthly</option>
-                        </select>
-                    </div>
-                    <div class="col-md-6">
-                        <button type="submit" class="btn btn-primary w-100">Add Habit</button>
-                    </div>
-                </div>
-            </form>
-        </div>
-
-        <!-- Progress Section -->
-        <div class="progress-section">
-            <h2>Your Progress</h2>
-            <div class="row mb-4">
-                <div class="col-md-4">
-                    <div class="stat-item">
-                        <div class="stat-value">{{ habits|length }}</div>
-                        <div class="stat-label">Total Habits</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="stat-item">
-                        <div class="stat-value">{{ habits|selectattr('completions')|map(attribute='completions')|map('length')|sum }}</div>
-                        <div class="stat-label">Total Completions</div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="stat-item">
-                        <div class="stat-value">{{ "%.1f"|format((habits|selectattr('completions')|map(attribute='completions')|map('length')|sum / (habits|length * 7)) * 100 if habits|length > 0 else 0) }}%</div>
-                        <div class="stat-label">Weekly Completion Rate</div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Habits Grid -->
-        <div class="habits-grid">
-            {% for habit in habits %}
-            <div class="habit-card">
-                <div class="habit-header">
-                    <h3 class="habit-title">{{ habit.name }}</h3>
-                    <span class="habit-category-badge">{{ habit.category }}</span>
-                </div>
-                {% if habit.description %}
-                <p class="habit-description">{{ habit.description }}</p>
-                {% endif %}
-                
-                <!-- Weekly Progress -->
-                <div class="weekly-progress">
-                    {% set days = ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun'] %}
-                    {% for day in days %}
-                    {% set today = now.strftime('%a') %}
-                    {% set completed = false %}
-                    {% for completion in habit.completions %}
-                        {% if completion.date.strftime('%Y-%m-%d') >= start_of_week.strftime('%Y-%m-%d') and completion.date.strftime('%a') == day %}
-                            {% set completed = true %}
-                        {% endif %}
-                    {% endfor %}
-                    <div class="day-marker {% if completed %}completed{% endif %} {% if day == today %}today{% endif %}">
-                        {{ day }}
-                    </div>
-                    {% endfor %}
-                </div>
-
-                <div class="habit-stats">
-                    <div class="stat-item">
-                        <div class="stat-value">{{ habit.streak }}</div>
-                        <div class="stat-label">Current Streak</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-value">{{ habit.completions|length }}</div>
-                        <div class="stat-label">Total Completions</div>
-                    </div>
-                </div>
-
-                <div class="habit-actions">
-                    <form action="{{ url_for('habits.complete_habit', habit_id=habit.id) }}" method="POST" class="d-inline">
-                        <button type="submit" class="btn-complete">
-                            <i class='bx bx-check'></i>
-                            Complete Today
-                        </button>
-                    </form>
-                    <form action="{{ url_for('habits.delete_habit', habit_id=habit.id) }}" method="POST" class="d-inline">
-                        <button type="submit" class="btn-delete" onclick="return confirm('Are you sure you want to delete this habit?')">
-                            <i class='bx bx-trash'></i>
-                            Delete
-                        </button>
-                    </form>
-                </div>
-            </div>
-            {% endfor %}
-        </div>
+    <!-- ✅ Welcome Section -->
+    <div class="welcome-section">
+      <h1>Welcome, Akhil!</h1>
+      <p>Track your habits and build a better you.</p>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- ✅ Add Habit Form -->
+    <div class="add-habit-section">
+      <h2>Add New Habit</h2>
+      <form>
+        <div class="row g-3">
+          <div class="col-md-6">
+            <input type="text" class="form-control" placeholder="Habit Name" required>
+          </div>
+          <div class="col-md-6">
+            <select class="form-control" required>
+              <option value="">Select Category</option>
+              <option>Health</option>
+              <option>Fitness</option>
+              <option>Learning</option>
+              <option>Productivity</option>
+              <option>Lifestyle</option>
+            </select>
+          </div>
+          <div class="col-12">
+            <textarea class="form-control" placeholder="Description (optional)" rows="2"></textarea>
+          </div>
+          <div class="col-md-6">
+            <select class="form-control" required>
+              <option value="">Select Frequency</option>
+              <option>Daily</option>
+              <option>Weekly</option>
+              <option>Monthly</option>
+            </select>
+          </div>
+          <div class="col-md-6">
+            <button type="submit" class="btn btn-primary w-100">Add Habit</button>
+          </div>
+        </div>
+      </form>
+    </div>
+
+    <!-- ✅ Static Progress Section -->
+    <div class="progress-section">
+      <h2>Your Progress</h2>
+      <div class="row mb-4">
+        <div class="col-md-4">
+          <div class="stat-item">
+            <div class="stat-value">5</div>
+            <div class="stat-label">Total Habits</div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="stat-item">
+            <div class="stat-value">32</div>
+            <div class="stat-label">Total Completions</div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="stat-item">
+            <div class="stat-value">82%</div>
+            <div class="stat-label">Weekly Completion Rate</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ✅ Static Habit Cards -->
+    <div class="habits-grid">
+
+      <div class="habit-card">
+        <div class="habit-header">
+          <h3 class="habit-title">Morning Run</h3>
+          <span class="habit-category-badge">Fitness</span>
+        </div>
+        <p class="habit-description">Jog for at least 20 minutes in the morning.</p>
+
+        <div class="weekly-progress">
+          <div class="day-marker completed">Mon</div>
+          <div class="day-marker completed">Tue</div>
+          <div class="day-marker">Wed</div>
+          <div class="day-marker today">Thu</div>
+          <div class="day-marker">Fri</div>
+          <div class="day-marker">Sat</div>
+          <div class="day-marker">Sun</div>
+        </div>
+
+        <div class="habit-stats">
+          <div class="stat-item">
+            <div class="stat-value">3</div>
+            <div class="stat-label">Current Streak</div>
+          </div>
+          <div class="stat-item">
+            <div class="stat-value">12</div>
+            <div class="stat-label">Total Completions</div>
+          </div>
+        </div>
+
+        <div class="habit-actions">
+          <button class="btn-complete"><i class='bx bx-check'></i> Complete Today</button>
+          <button class="btn-delete"><i class='bx bx-trash'></i> Delete</button>
+        </div>
+      </div>
+
+      <!-- Duplicate habit cards if needed -->
+      <div class="habit-card">
+        <div class="habit-header">
+          <h3 class="habit-title">Read 30 mins</h3>
+          <span class="habit-category-badge">Learning</span>
+        </div>
+        <p class="habit-description">Spend 30 minutes reading non-fiction daily.</p>
+
+        <div class="weekly-progress">
+          <div class="day-marker">Mon</div>
+          <div class="day-marker completed">Tue</div>
+          <div class="day-marker completed">Wed</div>
+          <div class="day-marker">Thu</div>
+          <div class="day-marker">Fri</div>
+          <div class="day-marker">Sat</div>
+          <div class="day-marker">Sun</div>
+        </div>
+
+        <div class="habit-stats">
+          <div class="stat-value">2</div>
+          <div class="stat-label">Current Streak</div>
+          <div class="stat-value">8</div>
+          <div class="stat-label">Total Completions</div>
+        </div>
+
+        <div class="habit-actions">
+          <button class="btn-complete"><i class='bx bx-check'></i> Complete Today</button>
+          <button class="btn-delete"><i class='bx bx-trash'></i> Delete</button>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
